@@ -13,6 +13,8 @@ CHANGELOG
   a modal would erroneously succeed.
 - TestEngine: fixed using WindowMove() with ImGuiTestOpFlags_NoFocusWindow
   (not an action that is possible by a real end-user).
+- TestEngine: fixed an issue with single-axis WindowResize() on small windows
+  where corner resize grip can overlap center of side borders.
 
 2025/12/19:
 - TestEngine: ctx->WindowResize(): passing 0.0f keep existing size of for
